samples/compiler-tests/fail/continue_outside.ktr
// continue_outside.ktr -- continue used outside request handler (InvalidOp)

request get_value() -> integer

agent main() -> integer {
  continue 42
}
